# swagger/swagger.yml
@@ -536,6 +536,30 @@ paths:
           description: :vigencia is empty
         "404":
           description: aborted by server
+  /gestion_resoluciones/consulta_docente/{persona_id}:
+    get:
+      tags:
+      - gestion_resoluciones
+      description: get GetResolucionesPorDocente
+      operationId: GestionResolucionesController.GetResolucionesPorDocente
+      parameters:
+      - in: query
+        name: persona_id
+        description: documento de identidad del docente
+        required: true
+        type: string
+      responses:
+        "201":
+          description: ""
+          schema:
+            type: array
+            items:
+              format: int64
+              type: integer
+        "400":
+          description: bad request
+        "502":
+          description: internal server error
   /gestion_resoluciones/get_resoluciones_aprobadas:
     get:
       tags:
@@ -627,7 +651,7 @@ definitions:
   5652.<nil>.ContratoVinculacion:
     title: ContratoVinculacion
     type: object
-  16526.0xc0006b32f0.false:
+  16526.0xc0007058c0.false:
     title: "false"
     type: object
   models.ApropiacionRubro:
@@ -979,7 +1003,7 @@ definitions:
     type: object
     properties:
       cdp_rp_docente:
-        $ref: '#/definitions/16526.0xc0006b32f0.false'
+        $ref: '#/definitions/16526.0xc0007058c0.false'
   models.Rubro:
     title: Rubro
     type: object
